# vedant-stock-exchange

./: .gitignore  README.org  build.zig  build.zig.zon  index.html  perfeval.sh
client/: .gitignore  .ocamlformat  README.md  client.opam  dune-project  mix.exs  shell.nix
client/assets/: tailwind.config.js
client/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
client/lib/: client.ml  client_web.ex  dune
client/lib/client/: application.ex
client/lib/client_web/: endpoint.ex  router.ex
client/lib/client_web/components/: core_components.ex  layouts.ex
client/lib/client_web/components/layouts/: root.html.heex
client/lib/client_web/controllers/: page_controller.ex
client/test/: dune
client/test/client_web/controllers/: error_html_test.exs
src/: constants.zig  main.zig  types.zig
src/handlers/: core.zig
src/utils/: client.zig  server.zig  socket.zig
tlse/: CMakeLists.txt  LICENSE  README.md  libtomcrypt.c  root.pem  tlse.c  tlse.zig  tlse_amalgamated.c  x509.c
tlse/examples/: CMakeLists.txt  tlsclienthello.c  tlshelloworld.c  tlssimple.c
